force-app/main/default/objects/copado__External_CI_Job_Result__c/fields/copado__Duration__c.field-meta.xml
<CustomField>
    <fullName>copado__Duration__c</fullName>
    <formula>IF(NOT(ISBLANK( copado__End_Time__c )),(copado__End_Time__c - copado__Start_Time__c)*24*60*60,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (in seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>