force-app/main/default/objects/copado__External_CI_Job_Result__c/fields/copado__External_CI_Job__c.field-meta.xml
<CustomField>
    <fullName>copado__External_CI_Job__c</fullName>
    <label>External CI Job</label>
    <referenceTo>copado__External_CI_Job__c</referenceTo>
    <relationshipLabel>External CI Job Results</relationshipLabel>
    <relationshipName>External_CI_Job_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>