force-app/main/default/objects/copado__External_CI_Job_Result__c/fields/copado__External_CI_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>copado__External_CI_Job_ID__c</fullName>
    <label>External CI Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>