force-app/main/default/objects/copado__External_CI_Job_Result__c/fields/copado__Job_URL__c.field-meta.xml
<CustomField>
    <fullName>copado__Job_URL__c</fullName>
    <label>Job URL</label>
    <type>Url</type>
</CustomField>