force-app/main/default/objects/copado__External_CI_Job_Result__c/fields/copado__Job_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>copado__Job_URL_Link__c</fullName>
    <formula>if(ISBLANK(copado__Job_URL__c), 
  &quot;&quot;,
  HYPERLINK(copado__Job_URL__c, &quot;View in &quot;&amp;TEXT( copado__External_CI_Job__r.copado__External_CI_Setting__r.copado__CI_Tool__c ))
)</formula>
    <label>Job URL Link</label>
    <type>Text</type>
</CustomField>